--- a/label/application-prod.properties
+++ b/label/application-prod.properties
@@ -1,2 +1,2 @@
-sample.property1=sample property 1
-sample.property2=sample property 2
+sample.property1=in lable folder
+sample.property2=in lable folder
