--- a/label/application-prod.properties
+++ b/label/application-prod.properties
@@ -1,2 +1,2 @@
-sample.property1=in lable folder
-sample.property2=in lable folder
+sample.property1=in label folder
+sample.property2=in label folder
