--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,2 +1,12 @@
 sample.property1=prod 1
 sample.property2=prod 2
+
+tkg.datasource.url=jdbc:postgresql://localhost:5432/tkg
+tkg.datasource.username=postgres
+tkg.datasource.password=hongdat10
+tkg.datasource.default-schema=analytic
+
+twt.datasource.url=jdbc:postgresql://localhost:5432/twt
+twt.datasource.username=postgres
+twt.datasource.password=hongdat10
+twt.datasource.default-schema=analytic
