--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,6 +1,6 @@
 sample.property1=prod 1
 sample.property2=prod 2
-sourcename=TWT,TKG
+sourceNames=TWT,TKG
 tkg.datasource.url=jdbc:postgresql://localhost:5432/tkg
 tkg.datasource.username=postgres
 tkg.datasource.password=hongdat10
